--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient"
+
+    android:background="@drawable/login"
     tools:context=".MainActivity">
 
     <ImageView
@@ -17,19 +18,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo2" />
+        app:srcCompat="@drawable/newlogo" />
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="213dp"
         android:layout_height="44dp"
-        android:layout_marginTop="224dp"
+        android:layout_marginTop="228dp"
         android:drawableLeft="@drawable/ic_action_user"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.441"
+        app:layout_constraintHorizontal_bias="0.429"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,6 +45,8 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textColor="#000000"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.435"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +62,7 @@
         android:layout_marginBottom="16dp"
         android:background="#000000"
 
-        android:backgroundTint="#7FFFD4"
+        android:backgroundTint="#DBA0F1"
         android:text="Login"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,9 +81,9 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
         android:background="#7FFFD4"
-        android:backgroundTint="#7FFFD4"
-        android:text="Sign In"
+        android:backgroundTint="#E1ABF6"
 
+        android:text="Sign Up"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
