--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -22,18 +22,20 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
-        android:fontFamily="casual"
+
+        android:fontFamily="More Fonts..."
+        android:padding="5dp"
         android:text="Watcher_24/7"
         android:textColor="#000000"
-        android:textSize="50dp"
-        android:textStyle="bold|italic"
+        android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:layout_constraintVertical_bias="0.441"
+        tools:fontFamily="@font/aclonica"
+        tools:textAlignment="center" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
