home page updated

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="256dp"
+        android:layout_marginTop="196dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,44 +26,46 @@
         android:fontFamily="More Fonts..."
         android:padding="5dp"
         android:text="Watcher_24/7"
-        android:textColor="#000000"
+        android:textColor="#5a2f74"
+        android:textFontWeight="1500"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.564"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:layout_constraintVertical_bias="0.441"
-        tools:fontFamily="@font/aclonica"
+        app:layout_constraintVertical_bias="0.451"
+        tools:fontFamily="cursive"
         tools:textAlignment="center" />
 
     <ProgressBar
         android:id="@+id/bar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="312dp"
-        android:layout_height="22dp"
+        android:layout_height="50dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="51dp"
+        android:progressBackgroundTint="#5a2f74"
+        android:progressTint="@color/purple_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        android:progressBackgroundTint="@color/white"
-        android:progressTint="@color/purple_500"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <TextView
         android:id="@+id/loading_percentage"
         android:layout_width="95dp"
-        android:layout_height="21dp"
+        android:layout_height="30dp"
         android:layout_marginStart="187dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="166dp"
         android:text="0%"
-        android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="@color/purple_500"
+        android:textColor="#5a2f74"
+        android:textFontWeight="1500"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.405"
         app:layout_constraintStart_toStartOf="parent"
