--- a/app/src/main/res/layout/activity_find_friends.xml
+++ b/app/src/main/res/layout/activity_find_friends.xml
@@ -2,22 +2,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/profile"
-    tools:context=".RequestFragment">
+    tools:context=".FindFriendsActivity">
 
-    <!-- TODO: Update blank fragment layout -->
-
+    <include
+        android:id="@+id/find_friends_toolbar"
+        layout="@layout/app_bar_layout"
+        app:layout_constraintBottom_toTopOf="@+id/find_friends_recycler"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></include>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/request_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="5dp"
+        android:layout_height="0dp"
+        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/find_friends_recycler"
+        app:layout_constraintTop_toBottomOf="@+id/find_friends_toolbar" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
