--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -11,22 +11,21 @@
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="196dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/welcome" />
+        app:layout_constraintVertical_bias="0.365"
+        android:src="@drawable/welcome" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView_welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:fontFamily="More Fonts..."
         android:padding="5dp"
         android:text="Watcher_24/7"
-        android:textColor="#5a2f74"
+        android:textColor="#5A2F74"
         android:textFontWeight="1500"
         android:textSize="40sp"
         android:textStyle="bold"
@@ -37,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
         app:layout_constraintVertical_bias="0.451"
         tools:fontFamily="cursive"
-        tools:textAlignment="center" />
+        android:textAlignment="center" />
 
     <ProgressBar
         android:id="@+id/bar"
