--- a/app/src/main/res/layout/activity_final_home2.xml
+++ b/app/src/main/res/layout/activity_final_home2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/profile"
+    android:background="@color/purple_200"
     tools:context=".FinalHomeActivity2">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -61,6 +61,7 @@
         android:id="@+id/vPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@drawable/profile"
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
