--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -53,7 +53,7 @@
         android:id="@+id/send_msg_req_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Send Message"
+        android:text="Send Friend Request"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
         android:textSize="20sp"
