--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,7 +4,7 @@
     android:id="@+id/frameLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/chats"
+    android:background="@drawable/profile"
     tools:context=".ChatFragment">
 
     <!-- TODO: Update blank fragment layout -->
