--- a/app/src/main/res/layout/message_format.xml
+++ b/app/src/main/res/layout/message_format.xml
@@ -1,33 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/message_profile_image"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="3dp"
+        android:src="@drawable/profile_user"
+        />
+
     <TextView
+        android:id="@+id/receiver_message_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="3dp"
+        android:layout_toEndOf="@+id/message_profile_image"
         android:background="#5a2f74"
+        android:text="receiver messages here"
+        android:padding="10dp"
+        android:textSize="14sp"
+        android:textStyle="bold"
         android:textColor="@color/white"
-        android:id="@+id/message_user"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif-condensed"
-        android:textSize="12dp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/message_user"
+        />
+
+
+    <ImageView
+        android:id="@+id/message_sender_image_view"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_alignParentEnd="true"
-        android:id="@+id/message_time"/>
+        android:layout_margin="5dp"
+        android:scaleType="centerCrop"
+        />
+
+    <ImageView
+        android:id="@+id/message_receiver_image_view"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentStart="true"
+        android:layout_margin="5dp"
+        android:scaleType="centerCrop"
+        />
+
+
     <TextView
+        android:id="@+id/sender_messsage_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/message_user"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="5dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentTop="@+id/receiver_message_text"
         android:background="@color/purple_200"
-        android:textColor="@color/black"
-        android:id="@+id/message_text"
-        android:fontFamily="sans-serif-condensed"
+        android:text="sender messages"
+        android:textSize="14sp"
+        android:padding="10dp"
         android:textStyle="bold"
-        android:textSize="12dp"/>
+        android:textColor="@android:color/black"
+        />
+
 </RelativeLayout>
