--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:title="Find Friends"
-        android:id="@+id/find_friends_menu"
-        android:visible="true"
+    <group>
+        <item
+            android:title="Find Savers"
+            android:id="@+id/find_friends_menu"
+            app:showAsAction="never">
 
-        app:showAsAction="never">
+        </item>
 
-    </item>
+    </group>
 
 
 </menu>
