--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -32,9 +32,10 @@
 
     <EditText
         android:id="@+id/user_name_signup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="235dp"
+        android:layout_height="45dp"
         android:layout_marginTop="96dp"
+        android:layout_marginBottom="27dp"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/ic_action_user"
         android:ems="10"
@@ -42,9 +43,10 @@
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
-        android:paddingRight="10dp"
 
+        android:paddingRight="20dp"
         android:paddingBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/password_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,9 +54,10 @@
 
     <EditText
         android:id="@+id/confirm_pass_signup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="235dp"
+        android:layout_height="52dp"
         android:layout_marginTop="240dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/ic_action_pass"
         android:ems="10"
@@ -62,8 +65,9 @@
         android:inputType="textPassword"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
-        android:paddingRight="10dp"
+        android:paddingRight="20dp"
         android:paddingBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/email_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,9 +75,10 @@
 
     <EditText
         android:id="@+id/password_signup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="234dp"
+        android:layout_height="45dp"
         android:layout_marginTop="168dp"
+        android:layout_marginBottom="27dp"
         android:autoText="false"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/ic_action_pass"
@@ -82,9 +87,10 @@
         android:inputType="textPassword"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
-        android:paddingRight="10dp"
+        android:paddingRight="20dp"
+
         android:paddingBottom="10dp"
-        
+        app:layout_constraintBottom_toTopOf="@+id/confirm_pass_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,9 +98,10 @@
 
     <EditText
         android:id="@+id/email_signup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="312dp"
+        android:layout_width="242dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="316dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/input_bg"
         android:drawableLeft="@android:drawable/sym_action_email"
         android:ems="10"
@@ -102,18 +109,20 @@
         android:inputType="textEmailAddress"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
-        android:paddingRight="10dp"
+        android:paddingRight="20dp"
         android:paddingBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/phone_signup"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/phone_signup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="237dp"
+        android:layout_height="51dp"
         android:layout_marginTop="400dp"
+        android:layout_marginBottom="49dp"
         android:background="@drawable/input_bg"
         android:drawableLeft="@android:drawable/stat_sys_phone_call"
         android:ems="10"
@@ -121,8 +130,9 @@
         android:inputType="phone"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
-        android:paddingRight="10dp"
+        android:paddingRight="20dp"
         android:paddingBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/register_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -150,10 +160,10 @@
         android:id="@+id/com_pass_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/confirm_pass_signup"
         app:layout_constraintEnd_toEndOf="@+id/confirm_pass_signup"
-        app:layout_constraintHorizontal_bias="0.919"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/confirm_pass_signup"
         app:srcCompat="@drawable/view" />
 
@@ -161,10 +171,11 @@
         android:id="@+id/pass_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
+        android:layout_marginStart="208dp"
         app:layout_constraintBottom_toBottomOf="@+id/password_signup"
         app:layout_constraintStart_toStartOf="@+id/password_signup"
         app:layout_constraintTop_toTopOf="@+id/password_signup"
+        app:layout_constraintVertical_bias="0.523"
         app:srcCompat="@drawable/view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
