--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -26,7 +26,7 @@
         android:fontFamily="More Fonts..."
         android:padding="5dp"
         android:text="Watcher_24/7"
-        android:textColor="#000000"
+        android:textColor="#5a2f74"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,13 +44,14 @@
         android:layout_width="312dp"
         android:layout_height="22dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="51dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="16dp"
         android:progressBackgroundTint="@color/white"
         android:progressTint="@color/purple_500"
+        app:layout_constraintBottom_toTopOf="@+id/loading_percentage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <TextView
